--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,5 +4,6 @@ spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-
 algamoney.origin-permitida=https://algamoney-angular-aev.herokuapp.com
+
+spring.profiles.active=oauth-security
