Final algamoney-api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,14 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
-spring.profiles.active=oauth-security
+spring.profiles.active=basic-security
+
+logging.level.com.example.algamoney.api=DEBUG
+
+algamoney.mail.host=smtp.gmail.com
+algamoney.mail.port=587
+algamoney.mail.username=aloisio.vieira@gmail.com
+algamoney.mail.password=58SF31at
+
+algamoney.s3.access-key-id=AKIAJTZOHQDMPJG7AUSQ
+algamoney.s3.secret-access-key=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
